added avro-schemas, tables for invite system
