# lingualab-impl/src/main/java/xyz/le30r/lingualab/auth/entity/Auth.java
@@ -1,10 +1,13 @@
 package xyz.le30r.lingualab.auth.entity;
 
 import jakarta.persistence.*;
+import jakarta.validation.constraints.Null;
 import lombok.*;
 import org.hibernate.Hibernate;
+import org.jetbrains.annotations.Nullable;
 import xyz.le30r.lingualab.user.User;
 
+import java.time.Instant;
 import java.util.Objects;
 
 
@@ -25,6 +28,9 @@ class Auth {
     private String password;
     @Enumerated(EnumType.STRING)
     Role role;
+    Instant createdAt;
+    @Nullable
+    Instant expiresAt;
 
     public boolean equals(Object other) {
         if (this == other) return true;
